# zincati

./: .cci.jenkinsfile  .gitignore  .packit.yaml  .travis.yml  COPYRIGHT  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: containers.yml  rust.yml
contrib/: Dockerfile.dev
contrib/monitoring-mixins/: README.md  jsonnetfile.json
contrib/monitoring-mixins/dashboards/: dashboards.libsonnet
docs/: _config.yml  contributing.md  development.md  index.md  usage.md
docs/development/: agent-actor-system.md  development.md  os-metadata.md  quickstart.md  testing.md  update-strategy-periodic.md
docs/development/cincinnati/: protocol.md  response.json
docs/development/fleetlock/: protocol.md
docs/images/: zincati-actors.dot  zincati-fleetlock.msc  zincati-fsm.dot
docs/usage/: agent-identity.md  auto-updates.md  configuration.md  logging.md  metrics.md  updates-strategy.md  usage.md
src/: main.rs  utils.rs
src/cincinnati/: client.rs  mock_tests.rs  mod.rs
src/cli/: agent.rs  deadend.rs  ex.rs  mod.rs
src/config/: fragments.rs  inputs.rs  mod.rs
src/dbus/: experimental.rs  mod.rs  updates.rs
src/drogue/: mod.rs  mqtt.rs
src/fleet_lock/: mock_tests.rs  mod.rs
src/identity/: basearch.rs  mod.rs  platform.rs
src/metrics/: mod.rs
src/rpm_ostree/: actor.rs  cli_deploy.rs  cli_finalize.rs  cli_status.rs  cli_upgrade.rs  imageref.rs  mock_tests.rs  mod.rs
src/strategy/: fleet_lock.rs  immediate.rs  marker_file.rs  mod.rs  periodic.rs
src/update_agent/: actor.rs  mod.rs  trigger.rs
src/weekly/: mod.rs  utils.rs
tests/fixtures/: 00-config-sample.toml  20-periodic-sample.toml  30-periodic-sample-non-utc.toml  31-periodic-sample-non-utc.toml  rpm-ostree-oci-status.json  rpm-ostree-staged.json  rpm-ostree-status-annotation.json  rpm-ostree-status.json
tests/kola/common/: libtest.sh
tests/kola/dbus/: test-experimental.sh
tests/kola/misc/: test-status.sh
tests/kola/server/: config.fcc  test-deadend-release.sh  test-marker-file-strategy.sh  test-stream.sh
tests/kola/server/data/: libtest.sh
